# ecal-algorithm-samples

./: LICENSE.txt  README.md  pyproject.toml
gesture_recognition/: README.md  RecognizedGesture.proto  RecognizedGesture_pb2.py  main.py
image_segmentation/: README.md  main.py  requirements.txt
object_detection/: annotate_images.py
